# ScrapChef

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DEPLOY.md  READ.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json
backend/migrations/: env.py
backend/migrations/versions/: 27a31c69d769_add_recipes_and_recipe_ingredients_.py  4f8416b1f344_initial_schema_users_households_pantry_.py  a1b2c3d4e5f6_add_shopping_lists_and_items_tables.py  b2c3d4e5f6a7_timestamps_to_timestamptz.py  c3d4e5f6a7b8_add_notifications_table.py  c8d4f48fdf72_initial_schema_users_households_pantry_.py  d4e5f6a7b8c9_add_pantry_image_url.py  e54c4896b47b_add_refresh_tokens_table.py
backend/src/app/: main.py
backend/src/app/core/: config.py  exceptions.py  logging.py  security.py
backend/src/app/infrastructure/api/: error_handlers.py  router.py
backend/src/app/infrastructure/database/: base.py  models.py  session.py
backend/src/app/modules/assistant/api/: parsing_schemas.py  routes.py  schemas.py
backend/src/app/modules/assistant/application/: dtos.py  parsing_dtos.py  parsing_ports.py  ports.py
backend/src/app/modules/assistant/infrastructure/: claude_generator.py  factory.py  gemini_client.py  gemini_generator.py  gemini_parsers.py  parser_factory.py  prompt.py  stub_generator.py  (+1 more)
backend/src/app/shared/domain/: entity.py  value_object.py
backend/tests/unit/: test_assistant.py  test_health.py  test_notifications.py  test_pantry_consume.py  test_pantry_cook.py  test_shopping_domain.py  test_shopping_use_cases.py
(+140 files in other folders)
