[project]
name = "smart-pantry-backend"
version = "0.1.0"
description = "Smart Pantry & Recipe Generator — API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",          # async Postgres driver
    "alembic>=1.13",          # migrations (Step 3)
    "python-jose[cryptography]>=3.3",  # JWT (Step 5)
    "bcrypt>=4.0",            # password hashing (Step 5)
    "pgvector>=0.3",          # embeddings (Step 9)
    "anthropic>=0.40",        # Leftover Chef AI — Claude provider (Step 9)
    "structlog>=24.4",        # structured logging
    "email-validator>=2.0",   # required by pydantic EmailStr
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",            # async test client
    "ruff>=0.6",
    "mypy>=1.11",
    "aiosqlite>=0.20",        # fast in-memory tests
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"